# redis-statistics

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py
src/components/analitic/: schema.py
src/components/response/: schema.py
src/models/: __init__.py
src/models/redis/: __init__.py  base.py
src/views/: analitics.py  health.py
