[tool.poetry]
name = "redis-api"
version = "0.1.0"
description = "Service for collect analitic"
authors = ["NeverEverLive <nevereverlives@gmail.com>"]
readme = "README.md"
packages = [{include = "redis_api"}]

[tool.poetry.dependencies]
python = "3.8.9"
anyio = "3.6.2"
async-timeout = "4.0.2"
click = "8.1.3"
fastapi = "0.88.0"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
PyYAML = "6.0"
redis = "4.4.0"
sniffio = "1.3.0"
starlette = "0.22.0"
typing-extensions = "4.4.0"
uvicorn = "0.20.0"
uvloop = "0.17.0"
watchfiles = "0.18.1"
websockets = "10.4"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
